	http://www.sybase.com/adaptiveserver/linux/
	http://www.redhat.com
	http://www.caldera.com


    test suite- brand new for this release.  probably needs some more test 
    cases to provide for more coverage of C code, but it's a good start.

    Macintosh port!  Thanks to Jim Ingham & Mark Roseman for some advice
    on building Tcl extensions with Apple's MPW (rather than CodeWarrior).
    MPW is now free, and I have access to a little-used Mac (well it does
    play CDs in my office), plus Sybase libraries for the Mac.  PowerPC 
    version only.  MPW makefile and pre-built shared library included.  

    install.tcl - change to work on Mac as well as Windows.

    man page - updated to reflect new & changed commands.

    wisqlite - add dialog to save results to a file during sql fetches,
    options for columnar or raw output, separator characters.
    change floatprec to tcl_precision.  set sybmsg(bgevents) all to
    keep window running.  break long menus of server names and database
    names into multi-column menus.

    beta2 release - fix silly handle index bug in sybconnect; fix 
	syb12safe.test when no password is used; fix syb11text.test to check
	for 'select into' db option; clean up makefile for
	testing and installing wisqlite.  
	add note in INSTALL to make sure 'select into/bulkcopy' db option is 
	set, otherwise syb11text.test may fail or fill up log (-nolog used.)
	minor tweaks to sybmon & sp_who; include in install-tools

    beta3 release -  change man page .TH header, fix suggested by
	Larry Virden.  Add 'sybevent' command based on code from
	Ben Vitale.  Add sybmsg(bgevents) to process Tcl events while
        waiting for server response.  Fix bug in sybclose where maxtext was 
        not reset, thanks Ben Vitale.  add test case for sybevent, update docs.
	Added a few #ifdefs for macintosh, to be more mac friendly.


--- October 2000

    Moved to SourceForge.  Added config/* to cvs tree (used to be included
    as a cvs link).  -- hobbs