@@ -1,6 +1,7 @@
 
-Man page in source (.man), formatted postscript (.ps), formatted html (.html),
-and formatted text (.txt)
+Man page in source (.man), portable document format (.pdf), 
+formatted html (.html), and formatted text (.txt)
 
 
-Tom Poindexter tpoindex@nyx.net
+Tom Poindexter <tpoindex@nyx.net>
+D. J. Hagberg <dhagberg@millibits.com>
