@@ -8,4 +8,4 @@
 # script is sourced, the variable $dir must contain the
 # full path name of this file's directory.
 
-package ifneeded Sybtcl 3.0 [list load [file join $dir @RELPATH@ @oratcl_LIB_FILE@]]
+package ifneeded Sybtcl 3.0 [list load [file join $dir @RELPATH@ @sybtcl_LIB_FILE@]]
