@@ -1,1 +1,1 @@
-package ifneeded Sybtcl 3.0 "load [file join $dir .. sybtcl30[info sharedlibextension]]"
+package ifneeded Sybtcl 3.0 [list load [file join $dir .. sybtcl30[info sharedlibextension]]]
